# basic-application

./: README.md  pyproject.toml
src/: .gitignore
src/lepapplication/: __init__.py  application.py  arguments.py  interface.py
src/lepapplication/commands/: __init__.py  abstract.py  cmd.py  interface.py  keyconvert.py  test.py
tests/: test.py
tests/testapp/: __main__.py  test.py
