[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lepecinapplication"
version = "0.0.1"
authors = [{ name = "Ivan Silajev", email = "evantrulife@gmail.com" }]
description = "Package for creating a simple Python based CLI app."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
# "Homepage" = ""
